...
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_story"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_story"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.github.ybq.android.spinkit.SpinKitView
...
